# security_kids_chat_bot

./: .gitignore  README.md  docker-compose.yml
chat_api/: Dockerfile  config_template.toml  crud.py  main.py  pyproject.toml  requirements.txt
chat_bot/: Dockerfile  bot.py  config_template.toml  languages.py  pyproject.toml  requirements.txt  steps_en.py  steps_fra.py  steps_ger.py  steps_ital.py  steps_pol.py  steps_ru.py  steps_tur.py  steps_ukr.py
