[tool.poetry]
name = "chat_api"
version = "0.1.0"
description = ""
authors = ["Evgenii Nikulin <nea@gm56.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
redis = "^4.3.4"
toml = "^0.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
