[tool.poetry]
name = "chat_bot"
version = "0.1.0"
description = ""
authors = ["Evgenii <ea.nikulin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
transitions = "^0.9.0"
requests = "^2.28.1"
toml = "^0.10.2"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

